--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chartjs-plugin-datalabels": "^0.6.0",
     "font-awesome": "^4.7.0",
     "lodash-es": "^4.17.11",
+    "menu-items": "0.0.1",
     "ng-bootstrap": "^1.6.3",
     "ng2-charts": "^2.2.2",
     "ngx-filter-pipe": "^2.1.2",
